Ajout JS pour la gestion catégorie

--- a/templates/category/new.html.twig
+++ b/templates/category/new.html.twig
@@ -1,16 +1,45 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Nouvelle catégorie{% endblock %}
+{% block title %}Nouvelle annonce{% endblock %}
 
 {% block body %}
     <div class="container mt-4">
-        <h1>Créer une nouvelle catégorie</h1>
+        <h1>Créer une nouvelle annonce</h1>
 
         {{ form_start(form) }}
         {{ form_widget(form) }}
         <button class="btn btn-primary">Créer</button>
         {{ form_end(form) }}
 
-        <a href="{{ path('app_category_index') }}" class="btn btn-secondary mt-3">Retour à la liste</a>
+        <a href="{{ path('app_home') }}" class="btn btn-secondary mt-3">Retour à l'accueil</a>
     </div>
+{% endblock %}
+
+{% block javascripts %}
+    {{ parent() }}
+    <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            var regionSelect = document.querySelector('#listing_form_region');
+            var departmentSelect = document.querySelector('#listing_form_department');
+
+            regionSelect.addEventListener('change', function() {
+                var regionId = this.value;
+                departmentSelect.innerHTML = '<option value="">Sélectionnez un département</option>';
+                departmentSelect.disabled = true;
+
+                if (regionId) {
+                    fetch('{{ path('app_get_departments', {'id': 'REGION_ID'}) }}'.replace('REGION_ID', regionId))
+                        .then(response => response.json())
+                        .then(data => {
+                            data.forEach(function(department) {
+                                var option = new Option(department.name, department.id);
+                                departmentSelect.add(option);
+                            });
+                            departmentSelect.disabled = false;
+                        })
+                        .catch(error => console.error('Error:', error));
+                }
+            });
+        });
+    </script>
 {% endblock %}
